kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tendorix
  labels:
    name: tendorix
